--- a/Example/basic_robot_description/config/controller.yaml
+++ b/Example/basic_robot_description/config/controller.yaml
@@ -1,15 +1,15 @@
-Basic_Robot_controller:
+basic_robot_controller:
   # Publish all joint states -----------------------------------
   joint_state_controller:
     type: joint_state_controller/JointStateController
     publish_rate: 50
 
   # Position Controllers --------------------------------------
-  Rev1_position_controller:
+  right_joint_position_controller:
     type: effort_controllers/JointPositionController
-    joint: Rev1
+    joint: right_joint
     pid: {p: 100.0, i: 0.01, d: 10.0}
-  Rev2_position_controller:
+  left_joint_position_controller:
     type: effort_controllers/JointPositionController
-    joint: Rev2
+    joint: left_joint
     pid: {p: 100.0, i: 0.01, d: 10.0}
